--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "3; url = https://www.qries.com" />
+      <meta http-equiv = "refresh" content = "3; url = https://portfolio-c6e61e.ingress-baronn.ewp.live/" />
    </head>
    <body>
       <p>Redirecting to another URL</p>
