--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </h1>
             <p class="header-subtitle">WORDPRESS WEB DEVELOPER</p>
 
-            <button class="btn btn-primary" onclick="location.href='https://portfolio-c6e61e.ingress-baronn.ewp.live/'" type="button">Wait Or ClickVisit My Portfolio</button>
+            <button class="btn btn-primary" onclick="location.href='https://portfolio-c6e61e.ingress-baronn.ewp.live/'" type="button">Wait Or Click to Visit My Portfolio</button>
         </div>
     </header><!-- end of page header -->
 
