--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv = "refresh" content = "3; url = https://portfolio-c6e61e.ingress-baronn.ewp.live/" />
+    <meta http-equiv = "refresh" content = "3; url = https://portfolio-c94aef.ingress-baronn.ewp.live" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Meyawo landing page.">
     <meta name="author" content="Devcrud">
@@ -50,7 +50,7 @@
             </h1>
             <p class="header-subtitle">WORDPRESS WEB DEVELOPER</p>
             <p color="" id="countdown">3</p>
-            <button class="button-1"  onclick="location.href='https://portfolio-c6e61e.ingress-baronn.ewp.live/'" role="button"><span class="text">Click to Visit My Portfolio</span></button>
+            <button class="button-1"  onclick="location.href='https://portfolio-c94aef.ingress-baronn.ewp.live/'" role="button"><span class="text">Click to Visit My Portfolio</span></button>
         </div>
     </header><!-- end of page header -->
     
